# KD-Tree

./: .gitignore  CMakeLists.txt  README.md  input.csv  kd-tree  kd-tree.cpp  kd-tree.md  kd-tree2  kd-tree2.cpp
_test/: CMakeLists.txt  kd-tree.test.cpp
data/: points.csv
logs/: analysis_compile_time.txt  analysis_computation.txt  analysis_original.txt  valgrind_compile_time.out  valgrind_computation.out  valgrind_original.out
src/: CMakeLists.txt  _kd-search_ref.cpp  helper.cpp  helper.h  kd-search.cpp  kd-search.h  kd-tree.cpp  kd-tree.h  main.cpp
test/: CMakeLists.txt  kd-search-test.cpp  kd-search.test.cpp  kd-tree-test.cpp  kd-tree.test.cpp  test-runner.cpp
